--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "app",
   "version": "1.0.0",
   "description": "",
-
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,6 +13,7 @@
   "dependencies": {
     "esm": "^3.2.25",
     "express": "^4.17.3",
+    "joi": "^17.6.0",
     "mongoose": "^6.2.4",
     "nodemon": "^2.0.15"
   }
