--- a/package.json
+++ b/package.json
@@ -4,17 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -r esm index.js"
+    "test": "jest",
+    "start": "nodemon -r esm server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+   
     "esm": "^3.2.25",
     "express": "^4.17.3",
+    "express-winston": "^4.2.0",
+   
     "joi": "^17.6.0",
     "mongoose": "^6.2.4",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+   
+    "winston": "^3.6.0",
+    "winston-daily-rotate-file": "^4.6.1",
+    "winston-elasticsearch": "^0.16.1",
+    "winston-mongodb": "^5.0.7"
   }
 }
